src/objects/Band__c.object
<CustomObject>
    <fields>
        <fullName>Genre__c</fullName>
        <description>he type of music the band plays</description>
        <label>Genre</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rock and Roll</fullName>
                </value>
                <value>
                    <fullName>Bossanova</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Jazz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headliner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a checkbox that will be checked if the band is a &quot;Headliner.&quot;</description>
        <label>Headliner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Phone_Number__c</fullName>
        <description>Manager Phone Number</description>
        <label>Manager Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Needs_Piano__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if the band needs a piano on the stage they play at</description>
        <label>Needs Piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Time__c</fullName>
        <description>the time the band plays</description>
        <label>Set Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 AM</fullName>
                </value>
                <value>
                    <fullName>11 AM</fullName>
                </value>
                <value>
                    <fullName>12 PM</fullName>
                </value>
                <value>
                    <fullName>01 PM</fullName>
                </value>
                <value>
                    <fullName>02 PM</fullName>
                </value>
                <value>
                    <fullName>03 PM</fullName>
                </value>
                <value>
                    <fullName>04 PM</fullName>
                </value>
                <value>
                    <fullName>05 PM</fullName>
                </value>
                <value>
                    <fullName>06 PM</fullName>
                </value>
                <value>
                    <fullName>07 PM</fullName>
                </value>
                <value>
                    <fullName>08 PM</fullName>
                </value>
                <value>
                    <fullName>09 PM</fullName>
                </value>
                <value>
                    <fullName>1O PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <description>Twitter Handle</description>
        <label>Twitter Handle</label>
        <type>TextArea</type>
    </fields>
    <label>Band</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Band Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>